<resources>
    <string name="app_name">AllergyCheck</string>
    <string name="location">City</string>
    <string name="condition">n/a</string>
    <string name="airqualcondition">n/a</string>
    <string name="treename">Tree Quality</string>
    <string name="airname">Air Quality</string>
    <string name="search">Search</string>
    <string name="google_app_id">enduring-aria-132323</string>
    <string name="use_your_location">Use Your Location</string>
    <string name="city">Enter Any City!</string>
    <string name="state">state</string>
    <string name="country">Country</string>
    <string name="n_a">n/a</string>
    <string name="ragweedCondition">n/a</string>
    <string name="ragweed">Ragweed</string>
    <string name="grass">Grass</string>
</resources>
