<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="samueliox.allergycheck.MainActivity">

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
        <!--android:text="@string/temperature"-->
        <!--android:id="@+id/temperatureTextView"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_centerHorizontal="true" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/condition"
        android:id="@+id/treeConditionTextView"
        android:layout_below="@+id/treeView"
        android:layout_alignLeft="@+id/aqContidionTextView"
        android:layout_alignStart="@+id/aqContidionTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location"
        android:id="@+id/locationTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/airname"
        android:id="@+id/allergyTextView"
        android:layout_below="@+id/countryTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/treename"
        android:id="@+id/treeView"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/aqContidionTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/airqualcondition"
        android:id="@+id/aqContidionTextView"
        android:layout_below="@+id/allergyTextView"
        android:layout_toLeftOf="@+id/userLocationButton"
        android:layout_toStartOf="@+id/userLocationButton"
        android:layout_marginRight="28dp"
        android:layout_marginEnd="28dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/searchCityButton"
        android:layout_below="@+id/cityLocationInput"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cityLocationInput"
        android:text="@string/city"
        android:inputType="text"
        android:layout_below="@+id/aqContidionTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="154dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_your_location"
        android:id="@+id/userLocationButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/state"
        android:id="@+id/stateTextView"
        android:layout_below="@+id/locationTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/country"
        android:id="@+id/countryTextView"
        android:layout_below="@+id/stateTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/grass"
        android:id="@+id/grassTextView"
        android:layout_alignTop="@+id/allergyTextView"
        android:layout_alignRight="@+id/ragweedTextView"
        android:layout_alignEnd="@+id/ragweedTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ragweed"
        android:id="@+id/ragweedTextView"
        android:layout_alignTop="@+id/treeView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/n_a"
        android:id="@+id/grassConditionTextView"
        android:layout_below="@+id/grassTextView"
        android:layout_alignLeft="@+id/grassTextView"
        android:layout_alignStart="@+id/grassTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ragweedCondition"
        android:id="@+id/ragweedConditionTextView"
        android:layout_alignTop="@+id/treeConditionTextView"
        android:layout_alignLeft="@+id/grassConditionTextView"
        android:layout_alignStart="@+id/grassConditionTextView" />


    <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/yahoo_logo"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_centerHorizontal="true" />-->

    <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/weatherIconImageView"-->
        <!--android:src="@drawable/na"-->
        <!--android:layout_below="@+id/locationTextView"-->
        <!--android:layout_centerHorizontal="true" />-->


</RelativeLayout>
